--- a/.github/workflows/cron.optimism-mainnet.yml
+++ b/.github/workflows/cron.optimism-mainnet.yml
@@ -1,4 +1,5 @@
 name: CronJob - Liquidator Bot - Optimism
+runs-on: self-hosted
 on:
   schedule:
     - cron: "*/5 * * * *" # ie. 4:05pm, 4:10pm, 4:15pm ... etc.
