--- a/.github/workflows/cron.optimism-mainnet.yml
+++ b/.github/workflows/cron.optimism-mainnet.yml
@@ -17,7 +17,7 @@ permissions: write-all
 jobs:
   runCLI:
     name: Liquidator Bot
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       max-parallel: 1
       matrix:
