--- a/.github/workflows/cron.base-mainnet.yml
+++ b/.github/workflows/cron.base-mainnet.yml
@@ -5,7 +5,7 @@ on:
   push:
 env:
   CHAIN_ID: 8453
-  MIN_PROFIT_THRESHOLD_USD: 0.2
+  MIN_PROFIT_THRESHOLD_USD: 0.02
   SWAP_RECIPIENT: ''
   JSON_RPC_URL: ${{ secrets.BASE_MAINNET_JSON_RPC_URL }}
   COVALENT_API_KEY: ${{ secrets.COVALENT_API_KEY }}
@@ -17,7 +17,7 @@ permissions: write-all
 jobs:
   runCLI:
     name: Liquidator Bot
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       max-parallel: 1
       matrix:
