--- a/.github/workflows/cron.arbitrum-mainnet.yml
+++ b/.github/workflows/cron.arbitrum-mainnet.yml
@@ -3,9 +3,10 @@ on:
   schedule:
     - cron: "*/5 * * * *" # ie. 4:05pm, 4:10pm, 4:15pm ... etc.
   push:
+  workflow_dispatch:
 env:
   CHAIN_ID: 42161
-  MIN_PROFIT_THRESHOLD_USD: 0.01
+  MIN_PROFIT_THRESHOLD_USD: 0.15
   SWAP_RECIPIENT: '0xfBC5aC58FC04fdE49c9dD133F602C68dfC4173D0'
   JSON_RPC_URL: ${{ secrets.ARBITRUM_MAINNET_JSON_RPC_URL }}
   COVALENT_API_KEY: ${{ secrets.COVALENT_API_KEY }}
