--- a/.github/workflows/cron.optimism-mainnet.yml
+++ b/.github/workflows/cron.optimism-mainnet.yml
@@ -18,7 +18,7 @@ permissions: write-all
 jobs:
   runCLI:
     name: Liquidator Bot
-    runs-on: self-hosted
+    runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 1
       matrix:
