--- a/.github/workflows/cron.arbitrum-mainnet.yml
+++ b/.github/workflows/cron.arbitrum-mainnet.yml
@@ -6,11 +6,12 @@ on:
 env:
   CHAIN_ID: 42161
   MIN_PROFIT_THRESHOLD_USD: 0.5
-  SWAP_RECIPIENT: ''
+  SWAP_RECIPIENT: '0xfBC5aC58FC04fdE49c9dD133F602C68dfC4173D0'
   JSON_RPC_URL: ${{ secrets.ARBITRUM_MAINNET_JSON_RPC_URL }}
   COVALENT_API_KEY: ${{ secrets.COVALENT_API_KEY }}
   CUSTOM_RELAYER_PRIVATE_KEY: ${{ secrets.CUSTOM_RELAYER_PRIVATE_KEY }}
   CONTRACT_JSON_URL: 'https://raw.githubusercontent.com/GenerationSoftware/pt-v5-mainnet/bc9e4b4c25a033ec3c1c2b89b62422399b7db2f6/deployments/arbitrum/contracts.json'
+  CLAIM_REWARDS: 'true'
   ENV_TOKEN_ALLOW_LIST: '0x8653084e01bd8c9e24b9a8feb2036251ee0c16a9,0x0000206329b97DB379d5E1Bf586BbDB969C63274'
   NODE_OPTIONS: "--max_old_space_size=32768"
 permissions: write-all
