--- a/.github/workflows/cron.arbitrum-mainnet.yml
+++ b/.github/workflows/cron.arbitrum-mainnet.yml
@@ -6,7 +6,7 @@ on:
 env:
   CHAIN_ID: 42161
   MIN_PROFIT_THRESHOLD_USD: 0.5
-  SWAP_RECIPIENT: '0xfBC5aC58FC04fdE49c9dD133F602C68dfC4173D0'
+  SWAP_RECIPIENT: ''
   JSON_RPC_URL: ${{ secrets.ARBITRUM_MAINNET_JSON_RPC_URL }}
   COVALENT_API_KEY: ${{ secrets.COVALENT_API_KEY }}
   CUSTOM_RELAYER_PRIVATE_KEY: ${{ secrets.CUSTOM_RELAYER_PRIVATE_KEY }}
