--- a/.github/workflows/cron.optimism-mainnet.yml
+++ b/.github/workflows/cron.optimism-mainnet.yml
@@ -3,21 +3,23 @@ on:
   schedule:
     - cron: "*/20 * * * *" # ie. 4:20pm, 4:40pm, 5:00pm ... etc.
   push:
+  workflow_dispatch:
 env:
   CHAIN_ID: 10
-  MIN_PROFIT_THRESHOLD_USD: 0.5
+  MIN_PROFIT_THRESHOLD_USD: 0.09
   SWAP_RECIPIENT: ''
   JSON_RPC_URL: ${{ secrets.OPTIMISM_MAINNET_JSON_RPC_URL }}
   COVALENT_API_KEY: ${{ secrets.COVALENT_API_KEY }}
   CUSTOM_RELAYER_PRIVATE_KEY: ${{ secrets.CUSTOM_RELAYER_PRIVATE_KEY }}
   CONTRACT_JSON_URL: 'https://raw.githubusercontent.com/GenerationSoftware/pt-v5-mainnet/396f04daedc5a38935460ddf47d2f10e9ac1fec6/deployments/optimism/contracts.json'
+  CLAIM_REWARDS: 'true'
   ENV_TOKEN_ALLOW_LIST: ''
   NODE_OPTIONS: "--max_old_space_size=32768"
 permissions: write-all
 jobs:
   runCLI:
     name: Liquidator Bot
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       max-parallel: 1
       matrix:
