--- a/.github/workflows/cron.world-mainnet.yml
+++ b/.github/workflows/cron.world-mainnet.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     - cron: "*/20 * * * *" # ie. 4:20pm, 4:40pm, 5:00pm ... etc.
   push:
+  workflow_dispatch:
 env:
   CHAIN_ID: 480
   MIN_PROFIT_THRESHOLD_USD: 0.2
@@ -17,7 +18,7 @@ permissions: write-all
 jobs:
   runCLI:
     name: Liquidator Bot
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       max-parallel: 1
       matrix:
